          add_unique_constraint() as appropriate
        - dbicadmin now uses a /usr/bin/env shebang to work better with
          perlbrew and other local perl builds
        - bulk-inserts via $dbh->bind_array (void $rs->populate) now
          display properly in DBIC_TRACE
        - Incomplete exception thrown on relationship auto-fk-inference
          failures

    * Misc
        - Makefile.PL no longer imports GetOptions() to interoperate
          better with Catalyst installers
        - Bumped minimum Module::Install for developers

0.08123 2010-06-12 14:46 (UTC)
    * Fixes
        - Make sure Oracle identifier shortener applies to auto-generated
          column names, so we stay within the 30-char limit (RT#58271)
        - Oracle sequence detection now works across schemas
        - Fix a Storage/$dbh leak introduced by the migration to
          Try::Tiny (this is *not* a Try::Tiny bug)
        - Fix corner case of count with group-by over a 1:1 join column
          where the selector ends up with column name clashes
        - POD fixes (RT#58247)

    * Misc
        - Test suite default on-disk database now checks for Win32
          fail-conditions even when running on other OSes

0.08122 2010-06-03 17:41 (UTC)
    * New Features
        - Add DBIx::Class::FilterColumn for non-ref filtering
        - ::Storage::DBI now correctly preserves a parent $dbh from
          terminating children, even during interpreter-global
          out-of-order destruction
        - dbicadmin supports an -I option with the same semantics as
          perl itself
        - InflateColumn::DateTime support for MSSQL via DBD::Sybase
        - Millisecond precision support for MSSQL datetimes for
          InflateColumn::DateTime
        - Oracle-specific hierarchical query syntax support:
          CONNECT BY (NOCYCLE) / START WITH / ORDER SIBLINGS BY
        - Support connecting using $ENV{DBI_DSN} and $ENV{DBI_DRIVER}